added logic for auto gen balance

--- a/resources/app.properties
+++ b/resources/app.properties
@@ -1,4 +1,4 @@
 bootstrap_servers=localhost:9092
-topic_name=cdr_source
-num_records=1000
+topic_name=ea-events
+num_records=10
 starting_index=61123456
